# jukectl

./: Cargo.toml  DIAGRAMS.md  Dockerfile  GEMINI.md  JULES_GUIDE.md  README.md  ROADMAP.md  TODO  docker-compose.yaml  plan.md
.github/workflows/: audit.yaml  build-cli.yml  build-docker.yml  docker-cd.yml  rust-clippy.yml  scan.yml  security-scans.yml
cli/: Cargo.toml  README.md
cli/src/: banner.rs  main.rs
cli/src/models/: tags_data.rs
common/src/: lib.rs
common/src/models/: mod.rs  tags_data.rs
docs/: git-mcp-fix.md
server/: Cargo.toml
server/jukectl-mpdclient-sys/: Cargo.toml  build.rs  config.h
server/src/: app_state.rs  lib.rs  main.rs  mpd_conn.rs  scheduler.rs
server/src/models/: hashable_song.rs  song_queue.rs  tags_data.rs
server/src/mpd_conn/: mock_mpd.rs  mod.rs  mpd_conn.rs  mpd_pool.rs  raw_client.rs  traits.rs
server/src/nolog/: mod.rs
server/src/routes/: index.rs  mod.rs  queue.rs  song.rs  tags.rs
server/src/scheduler/: mod.rs
server/tests/: album_aware_shuffle_test.rs  config_test.rs  hashable_song.rs  integration_tests.rs  mock_mpd_conn_test.rs  simulator.rs  song_queue_test.rs
server/tests/fixtures/: mod.rs  music_library.rs  scheduler_simulation.rs
specs/: 0001-vinyl-jukebox.md  0002-album-aware-shuffle.md  0003-behavioral-simulator.md  0004-mock-infrastructure.md
src/: main.rs  mpd_conn.rs  queue.rs  queue_manager.rs  song_queue.rs  tags_data.rs
src/models/: hashable_song.rs  mod.rs  song.rs  song_queue.rs  tags_data.rs
