[package]
name = "jukectl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
mpd = "*"
rand = "0.8.5"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
queues = "1.0.2"
lazy_static = "1.4.0"
log = "0.4.20"

# we use cargo-geiger in the CICD workflows, but we don't
# **actually** need it listed in dev-deps.... listing it here
# seems to create more Scanner results than it solves ;)
#[dev-dependencies]
#cargo-geiger = "0.11.6"
