[package]
name = "jukectl-server"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11"
rand = "0.9.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
rocket = { version = "0.5.0", features = ["json"] }

mpd = "*"

# we use cargo-geiger in the CICD workflows, but we don't
# **actually** need it listed in dev-deps.... listing it here
# seems to create more Scanner results than it solves ;)
#[dev-dependencies]
#cargo-geiger = "0.11.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
