[package]
name = "jukectl-server"
version = "0.2.0"
edition = "2021"

[dependencies]
env_logger = "0.11"
rand = "0.9"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
rocket = { version = "0.5.0", features = ["json"] }

mpd = "*"
tokio = "1.47.1"

# we use cargo-geiger in the CICD workflows, but we don't
# **actually** need it listed in dev-deps.... listing it here
# seems to create more Scanner results than it solves ;)
#[dev-dependencies]
#cargo-geiger = "0.11.6"

[dev-dependencies]
mockall = "0.13.1"                                  # For creating mock objects
tokio-test = "0.4.2"                                # For testing async code
reqwest = { version = "0.11", features = ["json"] } # For API testing
#rand = "0.8.5"                                      # For generating random data in tests
test-log = "0.2.18"                                 # For capturing logs during tests
