[package]
name = "jukectl-server"
version = "0.2.0"
edition = "2021"

[dependencies]
env_logger = "0.11"
rand = "0.9"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22.1"
rocket = { version = "0.5.0", features = ["json"] }

# Our custom sys crate
jukectl-mpdclient-sys = { path = "jukectl-mpdclient-sys" }
anyhow = "1"
tokio = "1.48.0"
log = "0.4.29"

[dev-dependencies]
mockall = "0.14.0"
tokio-test = "0.4.2"
reqwest = { version = "0.12", features = ["json"] }
test-log = "0.2.19"
